test: refatora testes usando @Nested para melhor estrutura e legibilidade